--- a/src/main/resources/static/books.css
+++ b/src/main/resources/static/books.css
@@ -18,14 +18,16 @@ li {
     text-align: center;
 }
 
-li a {
+.listentry {
     display: block;
     padding: 20px;
 }
+
 .navleft {
 	float:left!important;
 	margin-left: 100px;
 }
+
 .navright {
 	float:right!important;
 	margin-right: 100px;
